kubernetes-ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fullrss
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: fullrss
  template:
    metadata:
      labels:
        app: fullrss
    spec:
      containers:
      - image: n0madic/fullrss
        imagePullPolicy: Always
        name: fullrss
      automountServiceAccountToken: false
---
apiVersion: v1
kind: Service
metadata:
  name: fullrss
spec:
  selector:
    app: fullrss
  ports:
  - protocol: TCP
    port: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullrss
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: fullrss.nomadic.name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fullrss
            port:
              number: 8000
