kubernetes.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fullrss
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: fullrss
    spec:
      containers:
      - image: n0madic/fullrss
        imagePullPolicy: Always
        name: fullrss
      automountServiceAccountToken: false
---
apiVersion: v1
kind: Service
metadata:
  name: fullrss
spec:
  selector:
    app: fullrss
  ports:
  - protocol: TCP
    port: 8000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fullrss
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: fullrss.nomadic.name
    http:
      paths:
      - path: /
        backend:
          serviceName: fullrss
          servicePort: 8000
